# ListFlow

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
Docs/: CLAUDE.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  TECHNICAL_SPEC.md
listflow/: __init__.py  cli.py  config.py  content.py  detector.py  gui_app.py  images.py  models.py  normalize.py  pipeline.py  pricing.py  storage.py
listflow/ebay/: __init__.py  auth.py  client.py  publisher.py  taxonomy.py
listflow/extractors/: __init__.py  aliexpress.py  amazon.py  base.py
tests/: test_cli.py  test_config.py  test_content.py  test_detector.py  test_ebay_auth.py  test_ebay_client.py  test_extractors.py  test_images.py  test_normalize.py  test_pipeline.py  test_pricing.py  test_publisher.py  test_storage.py  test_taxonomy.py
tests/fixtures/: aliexpress_1005010171981745.html  aliexpress_1005010171981745_desc.html  aliexpress_1005010171981745_state.json  aliexpress_3256809985666993.html  amazon_B00BAGTNAQ.html
